deploy: 8b32f060afec8f206c90f680126ff76c111451e7

--- a/1 Physics/2 Gravity/Problem_1/index.html
+++ b/1 Physics/2 Gravity/Problem_1/index.html
@@ -130,9 +130,9 @@
 <div class="section" itemprop="articleBody">
 <h1 id="problem-1">Problem 1</h1>
 <p>To solve this problem, we will derive Kepler's Third Law for circular orbits, discuss its astronomical implications, analyze real-world examples, and implement a computational model to verify the relationship.</p>
-<p>Derivation of Kepler's Third Law for Circular Orbits
-For a circular orbit, the gravitational force provides the centripetal force:</p>
-<p>G
+<p>Derivation of Kepler's Third Law for Circular Orbits</p>
+<p>For a circular orbit, the gravitational force provides the centripetal force:</p>
+<div class="arithmatex">\[G
 M
 m
 r
@@ -143,7 +143,7 @@ v
 2
 r
 r 
-2</p>
+2\]</div>
 <p>GMm
 ​
  = 
