deploy: ee3fc364a9247159790eba6a38152eaa45ea5e8c

--- a/1 Physics/2 Gravity/Problem_1/index.html
+++ b/1 Physics/2 Gravity/Problem_1/index.html
@@ -132,7 +132,7 @@
 <p>To solve this problem, we will derive Kepler's Third Law for circular orbits, discuss its astronomical implications, analyze real-world examples, and implement a computational model to verify the relationship.</p>
 <p>Derivation of Kepler's Third Law for Circular Orbits</p>
 <p>For a circular orbit, the gravitational force provides the centripetal force:</p>
-<div class="arithmatex">\[G
+<p>[G
 M
 m
 r
@@ -143,7 +143,8 @@ v
 2
 r
 r 
-2\]</div>
+2 \cos\theta</p>
+<p>]</p>
 <p>GMm
 ​
  = 
