deploy: 92145c006cef152eac82e8db18f4b9070a644138

--- a/1 Physics/2 Gravity/Problem_1/index.html
+++ b/1 Physics/2 Gravity/Problem_1/index.html
@@ -128,284 +128,44 @@
 </div>
 <div class="document" itemscope="itemscope" itemtype="http://schema.org/Article" role="main">
 <div class="section" itemprop="articleBody">
-<h1 id="problem-1">Problem 1</h1>
-<p>To solve this problem, we will derive Kepler's Third Law for circular orbits, discuss its astronomical implications, analyze real-world examples, and implement a computational model to verify the relationship.</p>
-<p>Derivation of Kepler's Third Law for Circular Orbits</p>
-<p>For a circular orbit, the gravitational force provides the centripetal force:</p>
-<p>[G
-M
-m
-r
-2
-=
-m
-v
-2
-r
-r 
-2 \cos\theta</p>
-<p>]</p>
-<p>GMm
-​
- = 
-r
-mv 
-2</p>
-<p>​</p>
-<p>Simplifying, we find:</p>
-<h1 id="v">v</h1>
-<p>G
-M
-r
-v= 
-r
-GM
-​</p>
-<p>​</p>
-<p>The orbital velocity 
-v
-v relates to the orbital period 
-T
-T as 
-v
-=
-2
-π
-r
-T
-v= 
-T
-2πr
-​
- . Substituting:</p>
-<p>2
-π
-r
-T
-=
-G
-M
-r
-T
-2πr
-​
- = 
-r
-GM
-​</p>
-<p>​</p>
-<p>Rearranging gives Kepler's Third Law:</p>
-<p>T
-2
-=
-4
-π
-2
-G
-M
-r
-3
-T 
-2
- = 
-GM
-4π 
-2</p>
-<p>​
- r 
-3</p>
-<p>Thus, 
-T
-2
-∝
-r
-3
-T 
-2
- ∝r 
-3
- .</p>
-<p>Astronomical Implications
-Planetary Masses: By observing 
-T
-T and 
-r
-r of a satellite, we calculate the central body's mass 
-M
-M.</p>
-<p>Exoplanet Detection: Doppler shifts and transit timing rely on this law to estimate exoplanet masses and orbits.</p>
-<p>Satellite Deployment: Ensures satellites have correct orbital periods for geostationary or low Earth orbits.</p>
-<p>Real-World Examples
-Moon's Orbit: 
-T
-≈
-27.3
-T≈27.3 days, 
-r
-≈
-384
-,
-400
-r≈384,400 km. Using 
-T
-2
-∝
-r
-3
-T 
-2
- ∝r 
-3
- , Earth's mass is accurately calculated.</p>
-<p>Solar System Planets: Mercury to Neptune follow 
-T
-2
-∝
-r
-3
-T 
-2
- ∝r 
-3
- , validating Kepler's Law.</p>
-<p>Computational Model and Verification
-We simulate circular orbits using Velocity Verlet integration to minimize numerical errors and verify 
-T
-2
-∝
-r
-3
-T 
-2
- ∝r 
-3
- .</p>
-<p>python
-Copy
-import numpy as np
-import matplotlib.pyplot as plt</p>
+<p>import numpy as np
+import matplotlib.pyplot as plt
+from scipy.constants import G</p>
 <h1 id="constants">Constants</h1>
-<p>G = 6.67430e-11  # m³ kg⁻¹ s⁻²
-M_earth = 5.972e24  # kg</p>
-<p>def kepler_period(r):
-    return np.sqrt(4 * np.pi<strong>2 * r</strong>3 / (G * M_earth))</p>
-<p>def simulate_orbit(r, dt=100, total_time=1e6):
-    x, y = r, 0
-    vx, vy = 0, np.sqrt(G * M_earth / r)
-    ax_prev = -G * M_earth * x / (x<strong>2 + y</strong>2)**1.5
-    ay_prev = 0</p>
-<pre><code>xs, ys = [x], [y]
-num_steps = int(total_time / dt)
-
-for _ in range(num_steps):
-    # Update position
-    x_new = x + vx * dt + 0.5 * ax_prev * dt**2
-    y_new = y + vy * dt + 0.5 * ay_prev * dt**2
-
-    # New acceleration
-    r_mag = np.sqrt(x_new**2 + y_new**2)
-    ax_new = -G * M_earth * x_new / r_mag**3
-    ay_new = -G * M_earth * y_new / r_mag**3
-
-    # Update velocity
-    vx += 0.5 * (ax_prev + ax_new) * dt
-    vy += 0.5 * (ay_prev + ay_new) * dt
-
-    x, y = x_new, y_new
-    ax_prev, ay_prev = ax_new, ay_new
-
-    xs.append(x)
-    ys.append(y)
-
-return xs, ys
-</code></pre>
-<h1 id="plot-t2-vs-r3">Plot T² vs r³</h1>
-<p>r_values = np.linspace(1e6, 1e8, 100)
-T_values = kepler_period(r_values)</p>
-<p>plt.figure(figsize=(10, 5))
-plt.plot(r_values<strong>3, T_values</strong>2, 'b-')
-plt.xlabel('Orbital Radius Cubed (m³)')
-plt.ylabel('Orbital Period Squared (s²)')
-plt.title("Kepler's Third Law: T² ∝ r³")
-plt.grid(True)
+<p>M_earth = 5.972e24  # kg, mass of Earth
+R_earth = 6.371e6   # m, radius of Earth</p>
+<h1 id="function-to-calculate-orbital-period-using-keplers-third-law">Function to calculate orbital period using Kepler's Third Law</h1>
+<p>def orbital_period(radius, M):
+    return 2 * np.pi * np.sqrt(radius**3 / (G * M))</p>
+<h1 id="generate-orbital-radii-from-low-earth-orbit-to-moon">Generate orbital radii (from Low Earth Orbit to Moon)</h1>
+<p>radii = np.linspace(R_earth + 200e3, 400e6, 100)  # 200km to 400,000km
+periods = orbital_period(radii, M_earth)</p>
+<h1 id="verify-keplers-third-law-t2-vs-r3">Verify Kepler's Third Law: T^2 vs R^3</h1>
+<p>T_squared = periods<strong>2
+R_cubed = radii</strong>3</p>
+<h1 id="plot-orbital-period-vs-orbital-radius">Plot Orbital Period vs Orbital Radius</h1>
+<p>plt.figure(figsize=(8, 5))
+plt.plot(radii / 1e6, periods / 3600, label='Orbital Period (hours)')
+plt.xlabel("Orbital Radius (million meters)")
+plt.ylabel("Orbital Period (hours)")
+plt.title("Orbital Period vs Orbital Radius")
+plt.legend()
+plt.grid()
 plt.show()</p>
-<h1 id="log-log-plot-to-show-slope">Log-log plot to show slope</h1>
-<p>plt.figure(figsize=(10, 5))
-plt.loglog(r_values, T_values, 'r-')
-plt.xlabel('Orbital Radius (m)')
-plt.ylabel('Orbital Period (s)')
-slope = np.polyfit(np.log(r_values), np.log(T_values), 1)[0]
-plt.title(f'Log-Log Plot (Slope = {slope:.2f})')
-plt.grid(True)
+<h1 id="plot-keplers-third-law-verification">Plot Kepler's Third Law Verification</h1>
+<p>plt.figure(figsize=(8, 5))
+plt.plot(R_cubed, T_squared, label="<span class="arithmatex">\(T^2\)</span> vs <span class="arithmatex">\(R^3\)</span>", color='red')
+plt.xlabel("<span class="arithmatex">\(R^3\)</span> (m^3)")
+plt.ylabel("<span class="arithmatex">\(T^2\)</span> (s^2)")
+plt.title("Verification of Kepler's Third Law")
+plt.legend()
+plt.grid()
 plt.show()</p>
-<h1 id="simulate-and-plot-orbit">Simulate and plot orbit</h1>
-<p>r_example = 4.2e7  # Geostationary orbit radius
-xs, ys = simulate_orbit(r_example, dt=100, total_time=1e6)</p>
-<p>plt.figure(figsize=(8, 8))
-plt.plot(xs, ys)
-plt.xlabel('x (m)')
-plt.ylabel('y (m)')
-plt.title('Simulated Circular Orbit')
-plt.axis('equal')
-plt.grid(True)
-plt.show()
-Graphical Representations
-T² vs r³: A linear plot confirming 
-T
-2
-∝
-r
-3
-T 
-2
- ∝r 
-3
- .</p>
-<p>Log-Log Plot: Slope ≈ 1.5, verifying 
-T
-∝
-r
-3
-/
-2
-T∝r 
-3/2
- .</p>
-<p>Orbit Simulation: Visual confirmation of a stable circular path.</p>
-<p>Elliptical Orbits Extension
-For elliptical orbits, Kepler's Law uses the semi-major axis 
-a
-a:</p>
-<p>T
-2
-=
-4
-π
-2
-G
-(
-M
-+
-m
-)
-a
-3
-T 
-2
- = 
-G(M+m)
-4π 
-2</p>
-<p>​
- a 
-3</p>
-<p>When 
-M
-≫
-m
-M≫m, it simplifies to the same form, enabling applications to comets, binary stars, and galaxies.</p>
-<p>Conclusion
-Kepler's Third Law is pivotal in celestial mechanics, enabling mass calculations and orbital predictions. The computational model confirms the theoretical relationship, underscoring its universality for circular and elliptical orbits.</p>
+<h1 id="discussion">Discussion:</h1>
+<h1 id="1-the-graph-of-t-vs-r-shows-an-increasing-trend-meaning-larger-orbits-take-longer-to-complete">1. The graph of T vs R shows an increasing trend, meaning larger orbits take longer to complete.</h1>
+<h1 id="2-the-plot-of-t2-vs-r3-is-linear-confirming-keplers-third-law-t2-r3">2. The plot of T^2 vs R^3 is linear, confirming Kepler's Third Law (T^2 ∝ R^3).</h1>
+<h1 id="3-this-principle-extends-to-planetary-orbits-allowing-astronomers-to-determine-masses-of-celestial-bodies">3. This principle extends to planetary orbits, allowing astronomers to determine masses of celestial bodies.</h1>
+<h1 id="4-for-elliptical-orbits-this-relationship-holds-approximately-using-the-semi-major-axis-as-the-radius-measure">4. For elliptical orbits, this relationship holds approximately using the semi-major axis as the radius measure.</h1>
 </div>
 </div><footer>
 <div aria-label="Footer Navigation" class="rst-footer-buttons" role="navigation">
