deploy: cf20f49bc55120ecbd8ce5f4a02d5c599c0b25f8

--- a/1 Physics/2 Gravity/Problem_1/index.html
+++ b/1 Physics/2 Gravity/Problem_1/index.html
@@ -184,6 +184,7 @@
 </ul>
 <h2 id="computational-simulation"><strong>Computational Simulation</strong></h2>
 <p>To validate Kepler's Third Law, we simulate a circular orbit numerically using Python. The simulation uses Newton's laws to model planetary motion under gravitational attraction.</p>
+<p><img alt="alt text" src="../image.png"/></p>
 <pre><code class="language-python">import numpy as np
 import matplotlib.pyplot as plt
 from scipy.constants import G, pi
