--- a/1 Physics/2 Gravity/Problem_2/index.html
+++ b/1 Physics/2 Gravity/Problem_2/index.html
@@ -129,6 +129,72 @@
 <div class="document" itemscope="itemscope" itemtype="http://schema.org/Article" role="main">
 <div class="section" itemprop="articleBody">
 <h1 id="problem-2">Problem 2</h1>
+<h1 id="escape-velocities-and-cosmic-velocities">Escape Velocities and Cosmic Velocities</h1>
+<h2 id="motivation"><strong>Motivation</strong></h2>
+<p>The concept of escape velocity is crucial for understanding the conditions required to leave a celestial body's gravitational influence. Extending this concept, the first, second, and third cosmic velocities define the thresholds for orbiting, escaping, and leaving a star system. These principles underpin modern space exploration, from launching satellites to interplanetary missions.</p>
+<h2 id="definitions-of-cosmic-velocities"><strong>Definitions of Cosmic Velocities</strong></h2>
+<h3 id="first-cosmic-velocity-orbital-velocity"><strong>First Cosmic Velocity (Orbital Velocity)</strong></h3>
+<p>The first cosmic velocity <span class="arithmatex">\( v_1 \)</span> is the minimum velocity required for an object to maintain a stable circular orbit around a celestial body. It is derived from equating the gravitational force to the required centripetal force:</p>
+<div class="arithmatex">\[ \frac{G M m}{r^2} = \frac{m v_1^2}{r} \]</div>
+<p>Solving for <span class="arithmatex">\( v_1 \)</span>:</p>
+<div class="arithmatex">\[ v_1 = \sqrt{\frac{G M}{r}} \]</div>
+<h3 id="second-cosmic-velocity-escape-velocity"><strong>Second Cosmic Velocity (Escape Velocity)</strong></h3>
+<p>The second cosmic velocity <span class="arithmatex">\( v_2 \)</span> is the minimum velocity required for an object to completely escape the gravitational pull of a celestial body. It is derived using the conservation of energy principle:</p>
+<div class="arithmatex">\[ \frac{1}{2} m v_2^2 = \frac{G M m}{r} \]</div>
+<p>Solving for <span class="arithmatex">\( v_2 \)</span>:</p>
+<div class="arithmatex">\[ v_2 = \sqrt{2 \frac{G M}{r}} = \sqrt{2} v_1 \]</div>
+<h3 id="third-cosmic-velocity-solar-system-escape-velocity"><strong>Third Cosmic Velocity (Solar System Escape Velocity)</strong></h3>
+<p>The third cosmic velocity <span class="arithmatex">\( v_3 \)</span> is the minimum velocity required for an object to escape the Sun’s gravitational influence from Earth’s orbit. It considers both Earth’s orbital velocity and the escape velocity from the Sun:</p>
+<div class="arithmatex">\[ v_3 = \sqrt{v_2^2 + v_{Earth-Orbit}^2} \]</div>
+<p>where <span class="arithmatex">\( v_{Earth-Orbit} \)</span> is Earth’s orbital velocity around the Sun.</p>
+<h2 id="mathematical-analysis-and-parameters-affecting-cosmic-velocities"><strong>Mathematical Analysis and Parameters Affecting Cosmic Velocities</strong></h2>
+<ul>
+<li><strong>Mass (M):</strong> Larger celestial bodies require higher escape velocities.</li>
+<li><strong>Radius (r):</strong> Smaller planets have lower escape velocities due to reduced gravity.</li>
+<li><strong>Atmospheric Drag:</strong> Can influence actual required launch velocities.</li>
+</ul>
+<h2 id="computational-calculation-and-visualization"><strong>Computational Calculation and Visualization</strong></h2>
+<p>We compute these velocities for Earth, Mars, and Jupiter using Python.</p>
+<p><img alt="alt text" src="../image-1.png"/></p>
+<pre><code class="language-python">import numpy as np
+import matplotlib.pyplot as plt
+from scipy.constants import G
+
+# Define planetary parameters (mass in kg, radius in meters)
+planets = {
+    "Earth": {"M": 5.972e24, "R": 6.371e6},
+    "Mars": {"M": 6.417e23, "R": 3.389e6},
+    "Jupiter": {"M": 1.898e27, "R": 6.9911e7},
+}
+
+def compute_velocities(M, R):
+    v1 = np.sqrt(G * M / R)
+    v2 = np.sqrt(2) * v1
+    return v1, v2
+
+# Compute velocities
+velocities = {planet: compute_velocities(data["M"], data["R"]) for planet, data in planets.items()}
+
+# Plot results
+fig, ax = plt.subplots()
+labels = []
+for planet, (v1, v2) in velocities.items():
+    ax.bar(planet, v1, label=f"{planet} Orbital Velocity")
+    ax.bar(planet, v2 - v1, bottom=v1, label=f"{planet} Escape Velocity")
+
+ax.set_ylabel("Velocity (m/s)")
+ax.set_title("First and Second Cosmic Velocities")
+ax.legend()
+plt.show()
+</code></pre>
+<h2 id="applications-in-space-exploration"><strong>Applications in Space Exploration</strong></h2>
+<ul>
+<li><strong>Launching Satellites:</strong> Requires first cosmic velocity to stay in orbit.</li>
+<li><strong>Interplanetary Travel:</strong> Requires second cosmic velocity to leave planetary gravity.</li>
+<li><strong>Interstellar Missions:</strong> Requires third cosmic velocity to leave the solar system.</li>
+</ul>
+<h2 id="conclusion"><strong>Conclusion</strong></h2>
+<p>Escape and cosmic velocities define key thresholds in space exploration. Their calculations help in designing spacecraft trajectories and fuel-efficient launches, making them fundamental to modern astrophysics and astronautics.</p>
 </div>
 </div><footer>
 <div aria-label="Footer Navigation" class="rst-footer-buttons" role="navigation">
