--- a/1 Physics/3 Waves/Problem_1/index.html
+++ b/1 Physics/3 Waves/Problem_1/index.html
@@ -138,6 +138,66 @@
 <div class="document" itemscope="itemscope" itemtype="http://schema.org/Article" role="main">
 <div class="section" itemprop="articleBody">
 <h1 id="problem-1">Problem 1</h1>
+<p>Interference Patterns on a Water Surface</p>
+<p>Motivation</p>
+<p>Interference occurs when waves from different sources overlap, creating unique patterns. On a water surface, this can be observed when ripples from different points meet, forming interference patterns. These patterns demonstrate how waves combine, either reinforcing or canceling each other.</p>
+<p>Studying these patterns helps us understand wave behavior and key concepts such as phase relationships and multi-source interactions. This task offers an engaging way to explore wave physics and its real-world applications in areas such as acoustics, optics, and fluid dynamics.</p>
+<p>Problem Statement</p>
+<p>Analyze the interference patterns formed on the water surface due to the superposition of waves emitted from point sources placed at the vertices of a chosen regular polygon.</p>
+<p>Mathematical Model</p>
+<p>A circular wave on the water surface, emanating from a point source located at , can be described by:</p>
+<p>where:</p>
+<p>is the displacement of the water surface at point  and time ,</p>
+<p>is the wave amplitude,</p>
+<p>is the wave number, related to the wavelength  by ,</p>
+<p>is the angular frequency, related to the frequency  by ,</p>
+<p>is the distance from the -th source to the point ,</p>
+<p>is the initial phase.</p>
+<p>Using the principle of superposition, the total displacement at any point on the water surface is:</p>
+<p>where  is the number of sources positioned at the vertices of the chosen regular polygon.</p>
+<p>Simulation of Interference Patterns</p>
+<p>import numpy as np
+import matplotlib.pyplot as plt</p>
+<h1 id="define-wave-parameters">Define wave parameters</h1>
+<p>A = 1       # Amplitude
+wavelength = 10  # Wavelength (arbitrary units)
+k = 2 * np.pi / wavelength  # Wave number
+f = 1       # Frequency (arbitrary units)
+w = 2 * np.pi * f  # Angular frequency</p>
+<h1 id="grid-for-simulation">Grid for simulation</h1>
+<p>x = np.linspace(-50, 50, 400)
+y = np.linspace(-50, 50, 400)
+X, Y = np.meshgrid(x, y)</p>
+<h1 id="define-function-to-compute-interference-pattern">Define function to compute interference pattern</h1>
+<p>def interference_pattern(sources, t=0):
+    Psi = np.zeros_like(X)
+    for (x0, y0) in sources:
+        r = np.sqrt((X - x0)<strong>2 + (Y - y0)</strong>2)
+        Psi += A * np.cos(k * r - w * t)
+    return Psi</p>
+<h1 id="define-sources-at-vertices-of-an-equilateral-triangle">Define sources at vertices of an equilateral triangle</h1>
+<p>polygon_vertices = [(-20, -10), (20, -10), (0, 20)]
+Psi = interference_pattern(polygon_vertices)</p>
+<h1 id="plot-the-interference-pattern">Plot the interference pattern</h1>
+<p>plt.figure(figsize=(8, 6))
+plt.contourf(X, Y, Psi, levels=100, cmap='viridis')
+plt.colorbar(label='Wave Amplitude')
+plt.scatter(<em>zip(</em>polygon_vertices), color='red', marker='o', label='Wave Sources')
+plt.xlabel("X Position")
+plt.ylabel("Y Position")
+plt.title("Interference Pattern from Three Wave Sources")
+plt.legend()
+plt.show()</p>
+<p>Analysis of Interference Patterns</p>
+<p>Constructive Interference: Bright regions indicate where waves reinforce each other, forming high amplitude waves.</p>
+<p>Destructive Interference: Dark regions show cancellation where the crest of one wave meets the trough of another.</p>
+<p>Wavefronts: The contour lines illustrate the wavefronts as they propagate outward from each source.</p>
+<p>Applications of Wave Interference</p>
+<p>Acoustics: Understanding sound wave interference helps in noise cancellation and speaker placement in auditoriums.</p>
+<p>Optics: Similar principles apply in light interference, such as in double-slit experiments and anti-reflective coatings.</p>
+<p>Water Engineering: Interference patterns assist in analyzing wave behavior in harbors and coastal structures.</p>
+<p>Conclusion</p>
+<p>By placing wave sources at the vertices of a regular polygon, we observe rich interference patterns formed by their superposition. These simulations provide insights into wave behavior, demonstrating fundamental principles of physics in an intuitive and visual manner.</p>
 </div>
 </div><footer>
 <div aria-label="Footer Navigation" class="rst-footer-buttons" role="navigation">
