deploy: 5354accaf8113e93794b07391c7bd0ef327f54e3

--- a/1 Physics/3 Waves/Problem_1/index.html
+++ b/1 Physics/3 Waves/Problem_1/index.html
@@ -175,8 +175,12 @@
 \]</div>
 <p>where <span class="arithmatex">\( N \)</span> is the number of sources positioned at the vertices of the chosen regular polygon.</p>
 <h2 id="simulation-of-interference-patterns"><strong>Simulation of Interference Patterns</strong></h2>
+<p><img alt="alt text" src="../image-1.png"/>
+<img alt="alt text" src="../image-2.png"/></p>
 <pre><code class="language-python">import numpy as np
 import matplotlib.pyplot as plt
+import matplotlib.animation as animation
+from mpl_toolkits.mplot3d import Axes3D
 
 # Define wave parameters
 A = 1       # Amplitude
@@ -191,15 +195,21 @@ y = np.linspace(-50, 50, 400)
 X, Y = np.meshgrid(x, y)
 
 # Define function to compute interference pattern
-def interference_pattern(sources, t=0):
+def interference_pattern(sources, t=0, phase_shifts=None):
     Psi = np.zeros_like(X)
-    for (x0, y0) in sources:
+    if phase_shifts is None:
+        phase_shifts = [0] * len(sources)
+    for i, (x0, y0) in enumerate(sources):
         r = np.sqrt((X - x0)**2 + (Y - y0)**2)
-        Psi += A * np.cos(k * r - w * t)
+        Psi += A * np.cos(k * r - w * t + phase_shifts[i])
     return Psi
 
-# Define sources at vertices of an equilateral triangle
-polygon_vertices = [(-20, -10), (20, -10), (0, 20)]
+# Define sources at vertices of different polygons
+def generate_polygon(n_sides, radius=20):
+    return [(radius * np.cos(2 * np.pi * i / n_sides), radius * np.sin(2 * np.pi * i / n_sides)) for i in range(n_sides)]
+
+# Example: Interference from a square configuration
+polygon_vertices = generate_polygon(4)  # Change number for different polygons
 Psi = interference_pattern(polygon_vertices)
 
 # Plot the interference pattern
@@ -209,8 +219,18 @@ plt.colorbar(label='Wave Amplitude')
 plt.scatter(*zip(*polygon_vertices), color='red', marker='o', label='Wave Sources')
 plt.xlabel("X Position")
 plt.ylabel("Y Position")
-plt.title("Interference Pattern from Three Wave Sources")
+plt.title("Interference Pattern from Four Wave Sources")
 plt.legend()
+plt.show()
+
+# 3D Surface Plot
+fig = plt.figure(figsize=(10, 7))
+ax = fig.add_subplot(111, projection='3d')
+ax.plot_surface(X, Y, Psi, cmap='coolwarm', edgecolor='none')
+ax.set_title("3D Surface Plot of Interference")
+ax.set_xlabel("X Position")
+ax.set_ylabel("Y Position")
+ax.set_zlabel("Wave Amplitude")
 plt.show()
 </code></pre>
 <h2 id="analysis-of-interference-patterns"><strong>Analysis of Interference Patterns</strong></h2>
@@ -218,6 +238,7 @@ plt.show()
 <li><strong>Constructive Interference:</strong> Bright regions indicate where waves reinforce each other, forming high amplitude waves.</li>
 <li><strong>Destructive Interference:</strong> Dark regions show cancellation where the crest of one wave meets the trough of another.</li>
 <li><strong>Wavefronts:</strong> The contour lines illustrate the wavefronts as they propagate outward from each source.</li>
+<li><strong>Phase Difference Effects:</strong> By introducing phase shifts in the sources, different interference patterns can emerge.</li>
 </ul>
 <h2 id="applications-of-wave-interference"><strong>Applications of Wave Interference</strong></h2>
 <ol>
