--- a/1 Physics/6 Statistics/Problem_1/index.html
+++ b/1 Physics/6 Statistics/Problem_1/index.html
@@ -183,7 +183,9 @@
 <hr/>
 <h3 id="python-code-implementation"><strong>Python Code Implementation</strong>:</h3>
 <p>The following Python script simulates the CLT using three types of distributions: <strong>Uniform</strong>, <strong>Exponential</strong>, and <strong>Binomial</strong>. We will generate large datasets for each population, sample data from them, calculate sample means for various sample sizes, and visualize the convergence to a normal distribution.</p>
-<p><img alt="alt text" src="../image.png"/></p>
+<p><img alt="alt text" src="../image.png"/>
+<img alt="alt text" src="../image-4.png"/>
+<img alt="alt text" src="../image-5.png"/></p>
 <h4 id="step-by-step-code"><strong>Step-by-Step Code</strong>:</h4>
 <pre><code class="language-python">import numpy as np
 import matplotlib.pyplot as plt
